--- a/app/src/main/res/layout/list_item_reminder.xml
+++ b/app/src/main/res/layout/list_item_reminder.xml
@@ -1,7 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/linearLayout"
+    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_height="wrap_content"
+    android:padding="8dp">
+    <TextView
+        android:id="@+id/reminder_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Reminder Title"/>
+    <TextView
+        android:id="@+id/reminder_location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Reminder Location"/>
+    <TextView
+        android:id="@+id/reminder_due_date"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Reminder Due Date"/>
+</LinearLayout>
