--- a/app/src/main/res/layout/list_item_reminder.xml
+++ b/app/src/main/res/layout/list_item_reminder.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/design_default_color_primary_variant">
     <TextView
         android:id="@+id/reminder_title"
         android:layout_width="0dp"
@@ -17,7 +17,8 @@
         android:textAppearance="?attr/textAppearanceHeadline5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/reminder_completed"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:textColor="@color/white"/>
     <TextView
         android:id="@+id/reminder_location"
         android:layout_width="0dp"
@@ -32,7 +33,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/reminder_due_date"
-        app:layout_constraintTop_toBottomOf="@+id/reminder_title"/>
+        app:layout_constraintTop_toBottomOf="@+id/reminder_title"
+        android:textColor="@color/white"/>
     <TextView
         android:id="@+id/reminder_due_date"
         android:layout_width="0dp"
@@ -47,7 +49,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/reminder_location"
         app:layout_constraintStart_toEndOf="@+id/reminder_completed"
-        app:layout_constraintTop_toBottomOf="@+id/reminder_title"/>
+        app:layout_constraintTop_toBottomOf="@+id/reminder_title"
+        android:textColor="@color/white"/>
     <ImageView
         android:id="@+id/reminder_completed"
         android:layout_width="wrap_content"
@@ -57,5 +60,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/baseline_check_box_24"
-        android:contentDescription="@string/checkbox_description"/>
+        android:contentDescription="@string/checkbox_description" />
 </androidx.constraintlayout.widget.ConstraintLayout>
