--- a/app/src/main/res/layout/list_item_reminder.xml
+++ b/app/src/main/res/layout/list_item_reminder.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/design_default_color_primary_variant">
+    android:background="@color/design_default_color_secondary"
+    android:minHeight="100dp">
+
     <TextView
         android:id="@+id/reminder_title"
         android:layout_width="0dp"
@@ -15,10 +18,11 @@
         android:text="Reminder Title"
         android:textAlignment="center"
         android:textAppearance="?attr/textAppearanceHeadline5"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/reminder_completed"
-        app:layout_constraintTop_toTopOf="parent"
-        android:textColor="@color/white"/>
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/reminder_location"
         android:layout_width="0dp"
@@ -30,11 +34,12 @@
         android:text="Reminder Location"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/reminder_due_date"
-        app:layout_constraintTop_toBottomOf="@+id/reminder_title"
-        android:textColor="@color/white"/>
+        app:layout_constraintTop_toBottomOf="@+id/reminder_title" />
+
     <TextView
         android:id="@+id/reminder_due_date"
         android:layout_width="0dp"
@@ -46,19 +51,54 @@
         android:text="Reminder Due Date"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/reminder_location"
         app:layout_constraintStart_toEndOf="@+id/reminder_completed"
-        app:layout_constraintTop_toBottomOf="@+id/reminder_title"
-        android:textColor="@color/white"/>
+        app:layout_constraintTop_toBottomOf="@+id/reminder_title" />
+
     <ImageView
         android:id="@+id/reminder_completed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
+        android:contentDescription="@string/checkbox_description"
+        android:src="@drawable/baseline_check_box_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/baseline_check_box_24"
-        android:contentDescription="@string/checkbox_description" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="8dp"
+        android:text="Due Date"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/reminder_due_date"
+        app:layout_constraintEnd_toEndOf="@+id/reminder_due_date"
+        app:layout_constraintStart_toStartOf="@+id/reminder_due_date"
+        app:layout_constraintTop_toBottomOf="@+id/reminder_title" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="8dp"
+        android:text="Location"
+        android:textColor="@color/black"
+        app:layout_constraintBottom_toTopOf="@+id/reminder_location"
+        app:layout_constraintEnd_toEndOf="@+id/reminder_location"
+        app:layout_constraintStart_toStartOf="@+id/reminder_location"
+        app:layout_constraintTop_toBottomOf="@+id/reminder_title" />
+    <View
+        android:id="@+id/divider"
+        android:layout_width="409dp"
+        android:layout_height="5dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
